--- a/server/modules/authentication/discord/definition.yml
+++ b/server/modules/authentication/discord/definition.yml
@@ -5,7 +5,16 @@ author: requarks.io
 logo: https://static.requarks.io/logo/discord.svg
 color: indigo lighten-2
 website: https://discordapp.com/
+isAvailable: true
 useForm: false
 props:
-  clientId: String
-  clientSecret: String
+  clientId:
+    type: String
+    title: Client ID
+    hint: Application Client ID
+    order: 1
+  clientSecret:
+    type: String
+    title: Client Secret
+    hint: Application Client Secret
+    order: 2
