--- a/server/modules/authentication/okta/definition.yml
+++ b/server/modules/authentication/okta/definition.yml
@@ -5,18 +5,30 @@ author: requarks.io
 logo: https://static.requarks.io/logo/okta.svg
 color: blue darken-1
 website: https://www.okta.com/
+isAvailable: true
 useForm: false
+scopes:
+  - profile
+  - email
+  - openid
 props:
   clientId:
+    title: Client ID
     type: String
     hint: 20 chars alphanumeric string
+    order: 2
   clientSecret:
+    title: Client Secret
     type: String
     hint: 40 chars alphanumeric string with a hyphen(s)
+    order: 3
   idp:
     title: Identity Provider ID (idp)
     type: String
-    hint: (optional) 20 chars alphanumeric string
+    hint: (Optional) - 20 chars alphanumeric string
+    order: 4
   audience:
+    title: Org URL
     type: String
-    hint: Okta domain (e.g. https://example.okta.com, https://example.oktapreview.com)
+    hint: Okta organization URL (e.g. https://example.okta.com, https://example.oktapreview.com), found on the Developer Dashboard, in the upper right.
+    order: 1
