--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "chokidar": "2.1.5",
     "clean-css": "4.2.1",
     "compression": "1.7.4",
+    "connect-session-knex": "1.4.0",
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
     "custom-error-instance": "2.1.1",
