--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "graphql-rate-limit-directive": "1.0.1",
     "graphql-subscriptions": "1.1.0",
     "graphql-tools": "4.0.4",
-    "graphql-upload": "8.0.6",
     "highlight.js": "9.15.6",
     "i18next": "15.1.0",
     "i18next-express-middleware": "1.8.0",
@@ -152,6 +151,7 @@
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "safe-regex": "2.0.2",
+    "sanitize-filename": "1.6.1",
     "scim-query-filter-parser": "1.1.0",
     "semver": "6.0.0",
     "serve-favicon": "2.5.0",
