fix: npm tasks cleanup

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "description": "A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown",
   "main": "wiki.js",
   "scripts": {
-    "start": "node wiki start",
-    "stop": "node wiki stop",
-    "restart": "node wiki restart",
+    "start": "node server",
     "dev": "node wiki dev",
     "build": "webpack --profile --config dev/webpack/webpack.prod.js",
     "watch": "webpack --config dev/webpack/webpack.dev.js",
@@ -119,7 +117,6 @@
     "node-cache": "4.2.0",
     "nodemailer": "6.1.1",
     "objection": "1.6.8",
-    "ora": "3.4.0",
     "passport": "0.4.0",
     "passport-auth0": "1.1.0",
     "passport-azure-ad-oauth2": "0.0.4",
@@ -143,7 +140,6 @@
     "pg-hstore": "2.3.2",
     "pg-query-stream": "2.0.0",
     "pg-tsquery": "8.0.4",
-    "pm2": "3.5.0",
     "pug": "2.0.3",
     "qr-image": "3.2.0",
     "raven": "2.6.4",
