--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
   },
   "dependencies": {
     "@aoberoi/passport-slack": "1.0.5",
-    "@bugsnag/js": "6.2.0",
-    "algoliasearch": "3.32.1",
+    "@bugsnag/js": "6.3.0",
+    "algoliasearch": "3.33.0",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.4.8",
-    "apollo-server-express": "2.4.8",
+    "apollo-server": "2.5.1",
+    "apollo-server-express": "2.5.1",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.444.0",
-    "axios": "0.18.0",
+    "aws-sdk": "2.466.0",
+    "axios": "0.19.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
-    "bluebird": "3.5.4",
+    "bluebird": "3.5.5",
     "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "cheerio": "1.0.0-rc.3",
-    "chokidar": "2.1.5",
+    "chokidar": "3.0.0",
     "clean-css": "4.2.1",
     "compression": "1.7.4",
     "connect-session-knex": "1.4.0",
@@ -61,24 +61,24 @@
     "custom-error-instance": "2.1.1",
     "dependency-graph": "0.8.0",
     "diff": "4.0.1",
-    "diff2html": "2.7.0",
+    "diff2html": "2.9.0",
     "dotize": "0.3.0",
-    "elasticsearch": "15.4.1",
+    "elasticsearch": "16.1.0",
     "emoji-regex": "8.0.0",
-    "express": "4.16.4",
+    "express": "4.17.1",
     "express-brute": "1.0.1",
     "express-session": "1.16.1",
-    "file-type": "10.11.0",
+    "file-type": "11.1.0",
     "filesize": "4.1.2",
-    "fs-extra": "7.0.1",
+    "fs-extra": "8.0.1",
     "getos": "3.1.1",
-    "graphql": "14.2.1",
+    "graphql": "14.3.1",
     "graphql-list-fields": "2.0.2",
-    "graphql-rate-limit-directive": "1.0.1",
+    "graphql-rate-limit-directive": "1.1.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-tools": "4.0.4",
-    "highlight.js": "9.15.6",
-    "i18next": "15.1.0",
+    "highlight.js": "9.15.8",
+    "i18next": "15.1.3",
     "i18next-express-middleware": "1.8.0",
     "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "2.1.3",
@@ -88,12 +88,12 @@
     "js-yaml": "3.13.1",
     "jsonwebtoken": "8.5.1",
     "klaw": "3.0.0",
-    "knex": "0.16.5",
+    "knex": "0.17.1",
     "lodash": "4.17.11",
     "markdown-it": "8.4.2",
     "markdown-it-abbr": "1.0.4",
-    "markdown-it-anchor": "5.0.2",
-    "markdown-it-attrs": "2.3.3",
+    "markdown-it-anchor": "5.2.3",
+    "markdown-it-attrs": "2.4.1",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
@@ -108,15 +108,15 @@
     "mime-types": "2.1.24",
     "moment": "2.24.0",
     "moment-timezone": "0.5.25",
-    "mongodb": "3.2.3",
+    "mongodb": "3.2.6",
     "mssql": "5.1.0",
     "multer": "1.4.1",
     "mysql2": "1.6.5",
-    "nanoid": "2.0.1",
+    "nanoid": "2.0.3",
     "node-2fa": "1.1.2",
     "node-cache": "4.2.0",
-    "nodemailer": "6.1.1",
-    "objection": "1.6.8",
+    "nodemailer": "6.2.1",
+    "objection": "1.6.9",
     "passport": "0.4.0",
     "passport-auth0": "1.1.0",
     "passport-azure-ad-oauth2": "0.0.4",
@@ -133,10 +133,10 @@
     "passport-oauth2": "1.5.0",
     "passport-okta-oauth": "0.0.1",
     "passport-openidconnect": "0.0.2",
-    "passport-saml": "1.0.0",
+    "passport-saml": "1.1.0",
     "passport-twitch": "1.0.3",
     "pem-jwk": "2.0.0",
-    "pg": "7.10.0",
+    "pg": "7.11.0",
     "pg-hstore": "2.3.2",
     "pg-query-stream": "2.0.0",
     "pg-tsquery": "8.0.4",
@@ -149,28 +149,28 @@
     "safe-regex": "2.0.2",
     "sanitize-filename": "1.6.1",
     "scim-query-filter-parser": "1.1.0",
-    "semver": "6.0.0",
+    "semver": "6.1.1",
     "serve-favicon": "2.5.0",
-    "simple-git": "1.110.0",
-    "solr-node": "1.1.3",
-    "sqlite3": "4.0.6",
+    "simple-git": "1.113.0",
+    "solr-node": "1.2.1",
+    "sqlite3": "4.0.8",
     "striptags": "3.1.1",
     "subscriptions-transport-ws": "0.9.16",
     "tar-fs": "2.0.0",
-    "twemoji": "12.0.1",
+    "twemoji": "12.0.4",
     "uslug": "1.0.4",
     "uuid": "3.3.2",
     "validate.js": "0.12.0",
-    "validator": "10.11.0",
+    "validator": "11.0.0",
     "validator-as-promised": "1.0.2",
     "winston": "3.2.1",
-    "yargs": "13.2.2"
+    "yargs": "13.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-function-sent": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
@@ -178,8 +178,8 @@
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "@panter/vue-i18next": "0.15.0",
     "animate-sass": "0.8.2",
     "animated-number-vue": "0.1.5",
@@ -191,38 +191,37 @@
     "apollo-link-http": "1.5.14",
     "apollo-link-persisted-queries": "0.2.2",
     "apollo-link-ws": "1.0.17",
-    "apollo-upload-client": "10.0.0",
     "apollo-utilities": "1.2.1",
     "autoprefixer": "9.5.1",
     "babel-eslint": "10.0.1",
-    "babel-jest": "24.7.1",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-graphql-tag": "2.1.0",
+    "babel-jest": "24.8.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-graphql-tag": "2.4.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-transform-imports": "1.5.1",
     "brace": "0.11.1",
-    "cache-loader": "3.0.0",
+    "cache-loader": "3.0.1",
     "chart.js": "2.8.0",
-    "clean-webpack-plugin": "2.0.1",
+    "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "5.0.3",
     "core-js": "2.6.3",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "duplicate-package-checker-webpack-plugin": "3.0.0",
-    "epic-spinners": "1.0.4",
+    "epic-spinners": "1.1.0",
     "eslint": "5.16.0",
     "eslint-config-requarks": "1.0.7",
     "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-import": "2.17.3",
+    "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.1.1",
     "eslint-plugin-standard": "4.0.0",
     "eslint-plugin-vue": "5.2.2",
     "file-loader": "3.0.1",
-    "filepond": "4.4.0",
+    "filepond": "4.4.8",
     "filepond-plugin-file-validate-type": "1.2.4",
     "filesize.js": "1.0.2",
-    "grapesjs": "0.14.57",
+    "grapesjs": "0.14.61",
     "graphiql": "0.13.0",
     "graphql-persisted-document-loader": "1.0.1",
     "graphql-tag": "^2.10.1",
@@ -233,10 +232,10 @@
     "i18next-xhr-backend": "2.0.1",
     "ignore-loader": "0.1.2",
     "js-cookie": "2.2.0",
-    "mini-css-extract-plugin": "0.6.0",
+    "mini-css-extract-plugin": "0.7.0",
     "moment-duration-format": "2.2.2",
-    "node-sass": "4.11.0",
-    "offline-plugin": "5.0.6",
+    "node-sass": "4.12.0",
+    "offline-plugin": "5.0.7",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-cssnext": "3.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -253,7 +252,7 @@
     "react-dom": "16.8.6",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.1.0",
-    "sass-resources-loader": "2.0.0",
+    "sass-resources-loader": "2.0.1",
     "script-ext-html-webpack-plugin": "2.1.3",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.23.1",
@@ -261,15 +260,15 @@
     "stylus-loader": "3.0.2",
     "twemoji-awesome": "1.0.6",
     "url-loader": "1.1.2",
-    "vee-validate": "2.2.5",
+    "vee-validate": "2.2.9",
     "velocity-animate": "1.5.2",
     "viz.js": "2.1.2",
     "vue": "2.6.10",
-    "vue-apollo": "3.0.0-beta.28",
+    "vue-apollo": "3.0.0-beta.30",
     "vue-chartjs": "3.4.2",
     "vue-clipboards": "1.2.4",
     "vue-codemirror": "4.0.6",
-    "vue-filepond": "5.1.0",
+    "vue-filepond": "5.1.1",
     "vue-hot-reload-api": "2.3.3",
     "vue-loader": "15.7.0",
     "vue-material-design-icons": "3.2.0",
@@ -280,22 +279,22 @@
     "vue-template-compiler": "2.6.10",
     "vue-tour": "1.1.0",
     "vue2-animate": "2.1.0",
-    "vuedraggable": "2.20.0",
-    "vuescroll": "4.12.2",
-    "vuetify": "1.5.13",
-    "vuex": "3.1.0",
+    "vuedraggable": "2.21.0",
+    "vuescroll": "4.13.0-beta",
+    "vuetify": "1.5.14",
+    "vuex": "3.1.1",
     "vuex-pathify": "1.2.2",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.30.0",
+    "webpack": "4.32.2",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.1",
-    "webpack-dev-middleware": "3.6.2",
-    "webpack-hot-middleware": "2.24.4",
+    "webpack-cli": "3.3.2",
+    "webpack-dev-middleware": "3.7.0",
+    "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.1",
     "webpack-subresource-integrity": "1.3.2",
     "whatwg-fetch": "3.0.0",
     "write-file-webpack-plugin": "4.5.0",
-    "xterm": "3.12.2",
+    "xterm": "3.14.1",
     "zxcvbn": "4.4.2"
   },
   "resolutions": {
