--- a/.babelrc
+++ b/.babelrc
@@ -21,7 +21,8 @@
   "presets": [
     [
       "@babel/preset-env", {
-        "useBuiltIns": "entry"
+        "useBuiltIns": "entry",
+        "corejs": 3
       }
     ]
   ]
