fix: avoid setting db ssl unless explicitly provided

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -14,6 +14,7 @@ defaults:
       user: wikijs
       pass: wikijsrocks
       db: wiki
+      ssl: false
       storage: ./db.sqlite
     ssl:
       enabled: false
