feat: LDAP debug flag

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -39,6 +39,7 @@ defaults:
       theme: 'default'
       darkMode: false
     flags:
+      ldapdebug: false
       sqllog: false
     # System defaults
     setup: false
