feat: rtl display + dark theme improvements

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -31,6 +31,7 @@ defaults:
       autoUpdate: true
       namespaces: []
       namespacing: false
+      rtl: false
     telemetry:
       clientId: ''
       isEnabled: false
