feat: translations (wip)

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -43,6 +43,7 @@ defaults:
       ldapdebug: false
       sqllog: false
     # System defaults
+    channel: BETA
     setup: false
     paths:
       content: ./content
