--- a/config.sample.yml
+++ b/config.sample.yml
@@ -105,3 +105,11 @@ uploads:
   maxFileSize: 5242880
   # Maximum file uploads per request (default: 20)
   maxFiles: 10
+
+# ---------------------------------------------------------------------
+# Offline Mode
+# ---------------------------------------------------------------------
+# If your server cannot access the internet. Set to true and manually
+# download the offline files for sideloading.
+
+offline: false
