--- a/server/modules/analytics/gtm/definition.yml
+++ b/server/modules/analytics/gtm/definition.yml
@@ -1,6 +1,6 @@
 key: gtm
 title: Google Tag Manager
-description: Google specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware.
+description: Google Tag Manager is a tag management system created by Google to manage JavaScript and HTML tags used for tracking and analytics on websites.
 author: requarks.io
 logo: https://static.requarks.io/logo/google-tag-manager.svg
 website: https://tagmanager.google.com
@@ -11,16 +11,3 @@ props:
     title: Container Tracking ID
     hint: GTM-XXXXXXX
     order: 1
-codeHead: |
-  <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','{{containerTrackingId}}');</script>
-  <!-- End Google Tag Manager -->
-codeBodyStart: |
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{containerTrackingId}}"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
