--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "passport-dropbox-oauth2": "1.1.0",
     "passport-facebook": "3.0.0",
     "passport-github2": "0.1.11",
+    "passport-gitlab2": "5.0.0",
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.0",
     "passport-ldapauth": "2.1.3",
