--- a/server/modules/storage/digitalocean/definition.yml
+++ b/server/modules/storage/digitalocean/definition.yml
@@ -4,10 +4,36 @@ description: DigitalOcean provides developers and businesses a reliable, easy-to
 author: requarks.io
 logo: https://static.requarks.io/logo/digitalocean.svg
 website: https://www.digitalocean.com/products/spaces/
+isAvailable: false
+supportedModes:
+  - push
+defaultMode: push
+schedule: false
 props:
-  accessKeyId: String
-  accessSecret: String
   region:
     type: String
+    title: Region
+    hint: The DigitalOcean datacenter region where the Space will be created.
     default: nyc3
-  bucket: String
+    enum:
+      - ams3
+      - fra1
+      - nyc3
+      - sfo2
+      - sgp1
+    order: 1
+  spaceId:
+    type: String
+    title: Space Unique Name
+    hint: The unique space name to create (e.g. wiki-johndoe)
+    order: 2
+  accessKeyId:
+    type: String
+    title: Access Key ID
+    hint: The Access Key (Generated in API > Tokens/Keys > Spaces access keys).
+    order: 3
+  secretAccessKey :
+    type: String
+    title: Access Key Secret
+    hint: The Access Key Secret for the Access Key ID you created above.
+    order: 4
