feat: legacy login

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.5.5",
     "body-parser": "1.19.0",
+    "brute-knex": "4.0.0",
     "chalk": "2.4.2",
     "cheerio": "1.0.0-rc.3",
     "chokidar": "3.0.1",
