fix: i18n client caching

--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "highlight.js": "9.15.8",
     "i18next": "17.0.4",
     "i18next-express-middleware": "1.8.0",
-    "i18next-localstorage-cache": "1.1.1",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.7.4",
     "js-base64": "2.5.1",
@@ -231,6 +230,8 @@
     "hammerjs": "2.0.8",
     "html-webpack-plugin": "3.2.0",
     "html-webpack-pug-plugin": "2.0.0",
+    "i18next-chained-backend": "2.0.0",
+    "i18next-localstorage-backend": "3.0.0",
     "i18next-xhr-backend": "3.0.0",
     "ignore-loader": "0.1.2",
     "js-cookie": "2.2.0",
