--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "objection": "1.6.9",
     "passport": "0.4.0",
     "passport-auth0": "1.1.0",
-    "passport-azure-ad-oauth2": "0.0.4",
+    "passport-azure-ad": "4.1.0",
     "passport-cas": "0.1.1",
     "passport-discord": "0.1.3",
     "passport-dropbox-oauth2": "1.1.0",
