misc: migrate to vuetify 2.0 (wip)

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "@bugsnag/js": "6.3.2",
     "algoliasearch": "3.33.0",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.7.2",
-    "apollo-server-express": "2.7.2",
+    "apollo-server": "2.8.1",
+    "apollo-server-express": "2.8.1",
     "auto-load": "3.0.4",
-    "aws-sdk": "2.501.0",
+    "aws-sdk": "2.503.0",
     "axios": "0.19.0",
     "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
@@ -76,8 +76,8 @@
     "graphql-rate-limit-directive": "1.1.0",
     "graphql-subscriptions": "1.1.0",
     "graphql-tools": "4.0.5",
-    "highlight.js": "9.15.8",
-    "i18next": "17.0.6",
+    "highlight.js": "9.15.9",
+    "i18next": "17.0.8",
     "i18next-express-middleware": "1.8.0",
     "i18next-node-fs-backend": "2.1.3",
     "image-size": "0.7.4",
@@ -91,7 +91,7 @@
     "markdown-it": "9.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-anchor": "5.2.4",
-    "markdown-it-attrs": "2.4.1",
+    "markdown-it-attrs": "3.0.0",
     "markdown-it-emoji": "1.4.0",
     "markdown-it-expand-tabs": "1.0.13",
     "markdown-it-external-links": "0.0.6",
@@ -116,7 +116,7 @@
     "nodemailer": "6.3.0",
     "objection": "1.6.9",
     "passport": "0.4.0",
-    "passport-auth0": "1.1.0",
+    "passport-auth0": "1.2.0",
     "passport-azure-ad": "4.1.0",
     "passport-cas": "0.1.1",
     "passport-discord": "0.1.3",
@@ -146,11 +146,11 @@
     "request": "2.88.0",
     "request-promise": "4.2.4",
     "safe-regex": "2.0.2",
-    "sanitize-filename": "1.6.1",
+    "sanitize-filename": "1.6.2",
     "scim-query-filter-parser": "1.1.0",
     "semver": "6.3.0",
     "serve-favicon": "2.5.0",
-    "simple-git": "1.123.0",
+    "simple-git": "1.124.0",
     "solr-node": "1.2.1",
     "sqlite3": "4.0.9",
     "striptags": "3.1.1",
@@ -221,7 +221,7 @@
     "eslint-plugin-vue": "5.2.3",
     "fibers": "4.0.1",
     "file-loader": "4.1.0",
-    "filepond": "4.4.11",
+    "filepond": "4.4.12",
     "filepond-plugin-file-validate-type": "1.2.4",
     "filesize.js": "1.0.2",
     "grapesjs": "0.14.62",
@@ -256,7 +256,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "resolve-url-loader": "3.1.0",
-    "sass": "1.22.7",
+    "sass": "1.22.9",
     "sass-loader": "7.1.0",
     "sass-resources-loader": "2.0.1",
     "script-ext-html-webpack-plugin": "2.1.4",
@@ -286,20 +286,21 @@
     "vue2-animate": "2.1.0",
     "vuedraggable": "2.23.0",
     "vuescroll": "4.13.1",
-    "vuetify": "2.0.1",
+    "vuetify": "2.0.4",
     "vuetify-loader": "1.3.0",
     "vuex": "3.1.1",
     "vuex-pathify": "1.2.4",
     "vuex-persistedstate": "2.5.4",
-    "webpack": "4.38.0",
-    "webpack-bundle-analyzer": "3.3.2",
+    "webpack": "4.39.1",
+    "webpack-bundle-analyzer": "3.4.1",
     "webpack-cli": "3.3.6",
     "webpack-dev-middleware": "3.7.0",
     "webpack-hot-middleware": "2.25.0",
     "webpack-merge": "4.2.1",
     "webpack-subresource-integrity": "1.3.2",
+    "webpackbar": "3.2.0",
     "whatwg-fetch": "3.0.0",
-    "write-file-webpack-plugin": "4.5.0",
+    "write-file-webpack-plugin": "4.5.1",
     "xterm": "3.14.5",
     "zxcvbn": "4.4.2"
   },
